modifed account end point deployment